--- a/data/svg/digits/2.svg.template
+++ b/data/svg/digits/2.svg.template
@@ -1,8 +1,8 @@
 <g class="digit" id="digit_2" transform="translate(${x}, ${y})">
-    <path id="digit_2_fg"
+    <path id="digit_2_shadow"
           d="m1.0583 2.1167v1.0583h1.0583v-1.0583h3.175v2.1167h-2.1167v1.0583h-1.0583v1.0583h-1.0583v2.1167h5.2917v-2.1167h-1.0583v1.0583h-3.175v-1.0583h1.0583v-1.0583h2.1167v-1.0583h1.0583v-2.1167h-1.0583v-1.0583h-3.175v1.0583h-1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
-    <path id="digit_2_bg"
+    <path id="digit_2_fg"
           d="m0 1.0583v1.0583h1.0583v-1.0583h3.175v2.1167h-2.1167v1.0583h-1.0583v1.0583h-1.0583v2.1167h5.2917v-2.1167h-1.0583v1.0583h-3.175v-1.0583h1.0583v-1.0583h2.1167v-1.0583h1.0583v-2.1167h-1.0583v-1.0583h-3.175v1.0583h-1.0583z"
           fill="#fff" style="paint-order:stroke fill markers"/>
 </g>
