--- a/data/svg/output.svg.template
+++ b/data/svg/output.svg.template
@@ -1,6 +1,6 @@
 <svg version="1.1"
-     width="300"
-     height="200"
+     width="${width}"
+     height="32"
      xmlns="http://www.w3.org/2000/svg"
 >
     ${content}
