--- a/data/svg/digits/8.svg.template
+++ b/data/svg/digits/8.svg.template
@@ -1,4 +1,4 @@
-<g class="digit" id="digit_8" transform="translate(${x}, ${y})">
+<g class="digit" id="digit_8" transform="translate(${x}, ${y}), scale(${scale})">
     <path id="digit_8_shadow"
           d="m2.1167 1.0583v1.0583h3.175v-1.0583h-3.175zm3.175 1.0583v2.1167h1.0583v-2.1167h-1.0583zm0 2.1167h-3.175v1.0583h3.175v-1.0583zm0 1.0583v2.1167h1.0583v-2.1167h-1.0583zm0 2.1167h-3.175v1.0583h3.175v-1.0583zm-3.175 0v-2.1167h-1.0583v2.1167h1.0583zm0-3.175v-2.1167h-1.0583v2.1167h1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
