Added class to foreground to change text color

--- a/data/svg/total.svg.template
+++ b/data/svg/total.svg.template
@@ -3,5 +3,10 @@
      height="${height}"
      xmlns="http://www.w3.org/2000/svg"
 >
+    <style>
+        .text-foreground {
+            fill: ${foreground-color};
+        }
+    </style>
     ${content}
 </svg>
