--- a/data/svg/digits/0.svg.template
+++ b/data/svg/digits/0.svg.template
@@ -2,7 +2,7 @@
     <path id="digit_0_shadow"
           d="m2.1167 1.0583v1.0583h3.175v-1.0583h-3.175zm3.175 1.0583v1.0583h-1.0583v1.0583h1.0583v3.175h1.0583v-5.2917h-1.0583zm0 5.2917h-3.175v1.0583h3.175v-1.0583zm-3.175 0v-1.0583h1.0583v-1.0583h-1.0583v-3.175h-1.0583v5.2917h1.0583zm1.0583-2.1167h1.0583v-1.0583h-1.0583v1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
-    <path id="digit_0_fg"
+    <path id="digit_0_fg" class="text-foreground"
           d="m1.0583 0v1.0583h3.175v-1.0583h-3.175zm3.175 1.0583v1.0583h-1.0583v1.0583h1.0583v3.175h1.0583v-5.2917h-1.0583zm0 5.2917h-3.175v1.0583h3.175v-1.0583zm-3.175 0v-1.0583h1.0583v-1.0583h-1.0583v-3.175h-1.0583v5.2917h1.0583zm1.0583-2.1167h1.0583v-1.0583h-1.0583v1.0583z"
           fill="#fff" style="paint-order:stroke fill markers"/>
 </g>
