--- a/data/svg/digits/1.svg.template
+++ b/data/svg/digits/1.svg.template
@@ -2,7 +2,7 @@
     <path id="digit_1_shadow"
           d="m2.1167 2.1167v1.0583h1.0583v4.2333h-1.0583v1.0583h3.175v-1.0583h-1.0583v-6.35h-1.0583v1.0583h-1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
-    <path id="digit_1_fg"
+    <path id="digit_1_fg" class="text-foreground"
           d="m1.0583 1.0583v1.0583h1.0583v4.2333h-1.0583v1.0583h3.175v-1.0583h-1.0583v-6.35h-1.0583v1.0583h-1.0583z"
           fill="#fff" style="paint-order:stroke fill markers"/>
 </g>
