--- a/data/svg/digits/3.svg.template
+++ b/data/svg/digits/3.svg.template
@@ -2,7 +2,7 @@
     <path id="digit_3_shadow"
           d="m1.0583 2.1167v1.0583h1.0583v-1.0583h3.175v2.1167h-2.1167v1.0583h2.1167v2.1167h-3.175v-1.0583h-1.0583v1.0583h1.0583v1.0583h3.175v-1.0583h1.0583v-2.1167h-1.0583v-1.0583h1.0583v-2.1167h-1.0583v-1.0583h-3.175v1.0583h-1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
-    <path id="digit_3_fg"
+    <path id="digit_3_fg" class="text-foreground"
           d="m0 1.0583v1.0583h1.0583v-1.0583h3.175v2.1167h-2.1167v1.0583h2.1167v2.1167h-3.175v-1.0583h-1.0583v1.0583h1.0583v1.0583h3.175v-1.0583h1.0583v-2.1167h-1.0583v-1.0583h1.0583v-2.1167h-1.0583v-1.0583h-3.175v1.0583h-1.0583z"
           fill="#fff" style="paint-order:stroke fill markers"/>
 </g>
