--- a/data/svg/digits/7.svg.template
+++ b/data/svg/digits/7.svg.template
@@ -2,7 +2,7 @@
     <path id="digit_7_shadow"
           d="m1.0583 1.0583 2e-6 2.1167h1.0583v-1.0583h3.175v1.0583l2e-7 1.0583h-1.0583v1.0583h-1.0583l4e-7 3.175 1.0583 1e-7v-3.175h1.0583v-1.0583h1.0583l5e-7 -1.0583v-2.1167z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
-    <path id="digit_7_fg"
+    <path id="digit_7_fg" class="text-foreground"
           d="m0 0 2e-6 2.1167h1.0583v-1.0583h3.175v1.0583l2e-7 1.0583h-1.0583v1.0583h-1.0583l4e-7 3.175 1.0583 1e-7v-3.175h1.0583v-1.0583h1.0583l5e-7 -1.0583v-2.1167z"
           fill="#fff" style="paint-order:stroke fill markers"/>
 </g>
