Shadow opacity varies between dark and light mode

--- a/data/svg/total.svg.template
+++ b/data/svg/total.svg.template
@@ -7,6 +7,10 @@
         .text-foreground {
             fill: ${foreground-color};
         }
+        .text-shadow {
+            fill: #000000;
+            fill-opacity: ${shadow-alpha};
+        }
     </style>
     ${content}
 </svg>
