--- a/data/svg/digits/1.svg.template
+++ b/data/svg/digits/1.svg.template
@@ -1,5 +1,5 @@
 <g class="digit" id="digit_1" transform="translate(${x}, ${y}), scale(${scale})">
-    <path id="digit_1_shadow"
+    <path id="digit_1_shadow" class="text-shadow"
           d="m2.1167 2.1167v1.0583h1.0583v4.2333h-1.0583v1.0583h3.175v-1.0583h-1.0583v-6.35h-1.0583v1.0583h-1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
     <path id="digit_1_fg" class="text-foreground"
