--- a/data/svg/digits/6.svg.template
+++ b/data/svg/digits/6.svg.template
@@ -1,5 +1,5 @@
 <g class="digit" id="digit_6" transform="translate(${x}, ${y}), scale(${scale})">
-    <path id="digit_6_shadow"
+    <path id="digit_6_shadow" class="text-shadow"
           d="m3.175 1.0583v1.0583h2.1167v-1.0583h-2.1167zm0 1.0583h-1.0583v1.0583h1.0583v-1.0583zm-1.0583 1.0583h-1.0583v4.2333h1.0583v-2.1167h3.175v-1.0583h-3.175v-1.0583zm3.175 2.1167v2.1167h1.0583v-2.1167h-1.0583zm0 2.1167h-3.175v1.0583h3.175v-1.0583z"
           fill-opacity=".5" style="paint-order:stroke fill markers"/>
     <path id="digit_6_fg" class="text-foreground"
